Add in the about page.

--- a/content/posts/brandon-hatton/index.mdx
+++ b/content/posts/brandon-hatton/index.mdx
@@ -3,6 +3,7 @@ title: Brandon Hatton
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./brandon-1.png
+tags: ['Design', 'Development']
 ---
 
 ![Brandon Hatton](./brandon-1.png)
