--- a/content/posts/farrah-power/index.mdx
+++ b/content/posts/farrah-power/index.mdx
@@ -3,6 +3,7 @@ title: Farrah Power
 date: "2015-05-01T22:12:03.284Z"
 description: "Design & Development"
 featuredImage: ./farrah-web.png
+tags: ['Design', 'Development']
 ---
 
 # This is the blog post body
