--- a/content/posts/frenetic-labs/index.mdx
+++ b/content/posts/frenetic-labs/index.mdx
@@ -3,6 +3,7 @@ title: Frenetic Labs
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./frenetic-2.png
+tags: ['Design']
 ---
 
 ![Frenetic Labs](./frenetic-2.png)
