--- a/content/posts/hybrid-drumming/index.mdx
+++ b/content/posts/hybrid-drumming/index.mdx
@@ -3,6 +3,7 @@ title: Hybrid Drumming
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./hybrid-drumming-1.png
+tags: ['Design', 'Development']
 ---
 
 ![Hybrid Drumming](./hybrid-drumming-1.png)
