--- a/content/posts/lelush/index.mdx
+++ b/content/posts/lelush/index.mdx
@@ -3,6 +3,7 @@ title: Le Lush
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./lelush-1.png
+tags: ['Design']
 ---
 
 ![Le Lush](./lelush-1.png)
