--- a/content/posts/maxwell/index.mdx
+++ b/content/posts/maxwell/index.mdx
@@ -3,6 +3,7 @@ title: Maxwell Merch
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./maxwell-1.png
+tags: ['Design']
 ---
 
 ![Maxwell Merch Concept](./maxwell-1.png)
