--- a/content/posts/mntr/index.mdx
+++ b/content/posts/mntr/index.mdx
@@ -3,6 +3,7 @@ title: MNTR
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./mntr-1.png
+tags: ['Design', 'Development']
 ---
 
 ![MNTR](./mntr-1.png)
