--- a/content/posts/portrait-coffee/index.mdx
+++ b/content/posts/portrait-coffee/index.mdx
@@ -3,6 +3,7 @@ title: Portrait Coffee
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./portrait-1.png
+tags: ['Design', 'Development']
 ---
 
 ![Portrait Coffee](./portrait-1.png)
