--- a/content/posts/valor/index.mdx
+++ b/content/posts/valor/index.mdx
@@ -3,6 +3,7 @@ title: Valor Coffee
 date: "2015-05-01T22:12:03.284Z"
 description: "Design"
 featuredImage: ./valor-1.png
+tags: ['Design']
 ---
 
 ![Valor Coffee](./valor-1.png)
