--- a/content/posts/lelush/index.mdx
+++ b/content/posts/lelush/index.mdx
@@ -6,10 +6,21 @@ featuredImage: ./lelush-1.png
 tags: ['Design']
 ---
 
+# Merch Design
+
+Le Lush is a modern CBD and wellness brand. I worked on some apparel design for their Fall 2019 collection.
+The theme for the collection was entitled "Study Abroad." I took that and put together a few pieces that were
+inspired by souvenir graphics.
+
 ![Le Lush](./lelush-1.png)
 ![Le Lush](./lelush-2.png)
 ![Le Lush](./lelush-3.png)
 ![Le Lush](./lelush-4.png)
 ![Le Lush](./lelush-5.png)
+
+## Elbow Grease
+
+I actually spent a Saturday doing a very subtle marble Tie Dye on some of the shirts for them.
+
 ![Le Lush](./lelush-6.png)
 
