--- a/content/posts/maxwell/index.mdx
+++ b/content/posts/maxwell/index.mdx
@@ -6,6 +6,11 @@ featuredImage: ./maxwell-1.png
 tags: ['Design']
 ---
 
+# Merch Design
+
+I was working with a connection through a friend on some merch concepts for Maxwell. THe concert was with the National
+Symphony Orchestra. Ultimately they ended up going a different direction but I was still happy with the way these turned out.
+
 ![Maxwell Merch Concept](./maxwell-1.png)
 ![Maxwell Merch Concept](./maxwell-2.png)
 ![Maxwell Merch Concept](./maxwell-3.png)
