--- a/content/posts/mntr/index.mdx
+++ b/content/posts/mntr/index.mdx
@@ -6,9 +6,27 @@ featuredImage: ./mntr-1.png
 tags: ['Design', 'Development']
 ---
 
+# Website Design and Development
+
+MNTR is a group of business leaders and entrepreneurs that coach people and host a podcast. This 
+was a rebrand through Oust. They needed a fresh take on what business coaching could look like.
+
 ![MNTR](./mntr-1.png)
 ![MNTR](./mntr-2.png)
 ![MNTR](./mntr-3.png)
+
+## The Window
+
+Without much photography there was plenty of room to experiment with making the website feel interesting. 
+That lead me towards a more unconventional site container that feels almost like a window for content or a
+portal into what MNTR is.
+
 ![MNTR](./mntr-4.png)
 ![MNTR](./mntr-5.png)
 ![MNTR](./mntr-6.png)
+
+## Tools Used
+* Figma for designing and prototyping
+* Gatsby.JS for the Static Site Generator
+* Netlify for hosting and forms
+* NetlifyCMS as a GUI for all the Markdown Content
