--- a/content/posts/valor/index.mdx
+++ b/content/posts/valor/index.mdx
@@ -6,6 +6,17 @@ featuredImage: ./valor-1.png
 tags: ['Design']
 ---
 
+# Merch, Brand, and Packaging Design
+
+Valor is a coffee shop in Alpharetta, GA. The heart of the their cafe is hospitality and you feel that as soon as you 
+walk in the door. I worked on some concepts for a hat for them to sell. They ended up liking one concept for the hat and 
+taking another one (the smile logo) to put a fun spin on their brand in a few different areas
+
 ![Valor Coffee](./valor-1.png)
 ![Valor Coffee](./valor-2.png)
+
+## Valor Promotional Packaging
+
+I also did a design for a pack of instant coffee. They passed these out to promote the opening of their cafe.
+
 ![Valor Coffee](./valor-3.png)
